Ticket #5002 - Accounts: Issue with SVG icons in grid and manage menu in Dark mode. Core changes.

--- a/studio/template/css/common.less
+++ b/studio/template/css/common.less
@@ -99,6 +99,9 @@ div.bx-db-note {
 .bx-popup-content-indent {
     padding: 1.25rem;
 }
+.bx-popup-menu .bx-popup-content-indent {
+  padding: 0.5rem 0 !important;
+}
 .bx-popup-header.bx-def-padding {
     padding: 1.25rem 1.25rem 0 1.25rem;
 }
