--- a/studio/template/css/menu.css
+++ b/studio/template/css/menu.css
@@ -23,6 +23,11 @@ ul.bx-menu-toolbar li a .sys-icon-a {
     white-space: nowrap;
 }
 
+.bx-popup-menu ul.bx-menu-ver {
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+}
+
 /* --------------- Vertical in Popup */
 .bx-popup .bx-menu-ver.bx-menu-object-sys_switch_language_popup .bx-menu-item-icon {
     margin-right: 0 !important;
